add video from you tube

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
                                     </a>
                                 </div>
                                 <div class="counter-wrapper">
-                                    <h6 class="counter-inner"><span class="counter">500</span>K+</h6>
+                                    <h6 class="counter-inner"><span class="counter">500</span>+</h6>
                                     <span class="customers">customers</span>
                                 </div>
                             </div>
