--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -96,21 +96,21 @@
                             <div class="meta-wrapper">
                                 <a href="{% url 'main_about' %}" class="theme-btn">Learn more</a>
                                 <div class="meta-user">
-                                    <a href="#" class="image-inner">
-                                        <img src="{% static 'images/meta-user/meta-user-1.jpg' %}" alt="User">
+                                    <a href="#" class="image-inner" style="width: 56px; height: 56px;">
+                                        <img src="{% static 'images/icon/user-1.png' %}" alt="User">
                                     </a>
-                                    <a href="#" class="image-inner">
-                                        <img src="{% static 'images/meta-user/meta-user-2.jpg' %}" alt="User">
+                                    <a href="#" class="image-inner" style="width: 56px; height: 56px;">
+                                        <img src="{% static 'images/icon/user-2.png' %}" alt="User">
                                     </a>
-                                    <a href="#" class="image-inner">
-                                        <img src="{% static 'images/meta-user/meta-user-3.jpg' %}" alt="User">
+                                    <a href="#" class="image-inner" style="width: 56px; height: 56px;">
+                                        <img src="{% static 'images/icon/user-3.png' %}" alt="User">
                                     </a>
                                     <a href="#" class="image-inner">
                                         <i class="fa-solid fa-plus"></i>
                                     </a>
                                 </div>
                                 <div class="counter-wrapper">
-                                    <h6 class="counter-inner"><span class="counter">500</span>K+</h6>
+                                    <h6 class="counter-inner"><span class="counter">500</span>+</h6>
                                     <span class="customers">customers</span>
                                 </div>
                             </div>
@@ -119,13 +119,13 @@
                     <div class="col-xl-7 order-xl-2 order-1 wow fadeInRight" data-wow-delay=".4s">
                         <div class="about-us-image-wrapper-1">
                             <img class="bg-shape" src="{% static 'images/about-us-area/image-wrapper-bg-1.png' %}" alt="Shape">
-                            <div class="image-wrapper style-1">
+                            <div class="image-wrapper style-1" style="width: 290px; height: 290px;">
                                 <img src="{% static 'images/about-us-area/img-1.jpg' %}" alt=" Vacation Image">
                             </div>
-                            <div class="image-wrapper style-2">
+                            <div class="image-wrapper style-2" style="width: 200px; height: 200px;">
                                 <img src="{% static 'images/about-us-area/img-2.jpg' %}" alt=" Vacation Image">
                             </div>
-                            <div class="image-wrapper style-3">
+                            <div class="image-wrapper style-3" style="width: 350px; height: 350px;">
                                 <img src="{% static 'images/about-us-area/img-3.jpg' %}" alt=" Vacation Image">
                             </div>
                         </div>
@@ -205,12 +205,12 @@
                 </div>
             </div>
             <div class="video-modal-card style-1 wow fadeInUp" data-wow-delay=".4s">
-                <div class="image-wrapper">
+                <div class="image-wrapper" style="text-align: center; width: 1100px; border: 2px solid #e5e5e5; border-radius: 30px; background-color: #fff;">
                     <img src="{% static 'images/video-modal/bg-2.jpg' %}" alt="Video Modal">
                 </div>
                 <div class="popup-video-wrapper">
                     <div class="video-btn">
-                        <a href="https://www.youtube.com/watch?v=7e90gBu4pas" class="mfp-iframe video-play">
+                        <a href="https://www.youtube.com/watch?v=linlz7-Pnvw" class="mfp-iframe video-play">
                             <i class="icon-play-button" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -218,19 +218,19 @@
             </div>
             <div class="counter-area">
                 <div class="single-counter wow fadeInRight" data-wow-delay="0s">
-                    <p class="counter-inner"><span class="counter">25</span>K+</p>
+                    <p class="counter-inner"><span class="counter">50</span>+</p>
                     <p class="title">New users per week</p>
                 </div>
                 <div class="single-counter wow fadeInRight" data-wow-delay=".4s">
-                    <p class="counter-inner"><span class="counter">100</span>M+</p>
+                    <p class="counter-inner"><span class="counter">100</span>+</p>
                     <p class="title">Monthly active user</p>
                 </div>
                 <div class="single-counter wow fadeInRight" data-wow-delay=".8s">
-                    <p class="counter-inner"><span class="counter">25</span>K+</p>
+                    <p class="counter-inner"><span class="counter">50</span>+</p>
                     <p class="title">New users per week</p>
                 </div>
                 <div class="single-counter wow fadeInRight" data-wow-delay=".9s">
-                    <p class="counter-inner"><span class="counter">100</span>M+</p>
+                    <p class="counter-inner"><span class="counter">100</span>+</p>
                     <p class="title">Monthly active user</p>
                 </div>
             </div>
@@ -330,7 +330,7 @@
                 <div class="user-meta-info" style="display: flex; align-items: center; margin-bottom: 10px;">
                     <div class="user-info-inner" style="display: flex; align-items: center;">
                         <div class="img-wrapper" style="margin-right: 10px;">
-                            <img src="{% static 'images/icon/user2.png' %}" alt="User" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;">
+                            <img src="{% static 'images/icon/user-3.png' %}" alt="User" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover;">
                         </div>
                         <div class="content">
                             <h5 class="user-name" style="margin: 0; font-size: 16px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{ testimonial.user.username }}</h5>
