--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,29 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        /* Custom CSS for Language Dropdown */
+        .language-dropdown {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            z-index: 1000;
+        }
+        .language-dropdown .dropdown-menu {
+            right: 0;
+            left: auto;
+        }
+        @media (max-width: 991px) {
+            .language-dropdown {
+                position: static;
+                margin-left: auto;
+                margin-right: 10px;
+            }
+            .hide-on-mobile {
+                display: none !important;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Preloader Start !-->
@@ -99,23 +122,38 @@
                                         <a href="{% url 'main_contact' %}">{% trans "contact us" %}</a>
                                         </li>
                                     </li>
+                                    <li class="dropdown">
+                                        <a href="#" id="language-dropdown">{{ request.LANGUAGE_CODE|upper }}</a>
+                                        <ul class="sub-menu">
+                                            {% get_available_languages as LANGUAGES %}
+                                            {% get_current_language as LANGUAGE_CODE %}
+                                            {% for lang in LANGUAGES %}
+                                                <li>
+                                                    <a href="#" class="language-select" data-language="{{ lang.0 }}">{{ lang.0|upper }} - {{ lang.1 }}</a>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
                                     </li>
+                                    {% if request.user.is_authenticated %}
+                                    <li class="dropdown">
+                                        <a href="{% url 'logout' %}" style="font-size: 1.5em;">
+                                            <i class='bx bx-log-out mt-1 me-1'>Logout</i>
+                                        </a>
+                                    </li>
+                                    {% else %}
+                                    <li class="hide-on-mobile">
+                                            <a href="{% url 'register' %}" class="round-btn">{% trans "Sign Up" %}</a>
+
+                                    </li>
+                                    {% endif %}
                                 </ul>
                             </nav>
                         </div>
                             <div class="header-icon text-right">
-                            {% if request.user.is_authenticated %}
+
                             <div class="header-logout-icon d-inline-block text-light">
-                                <a href="{% url 'logout' %}" style="font-size: 1.5em;">
-                                    <i class='bx bx-log-out mt-1 me-1'>Logout</i>
-                                </a>      
-                            {% else %}           
-                                <a href="{% url 'login' %}" class="round-btn">{% trans "Login" %}</a>
-                                /   
-                                <a href="{% url 'register' %}" class="round-btn">{% trans "Sign Up" %}</a>
-                            </div>
-                                <!-- Header Button Start !-->
-                            {% endif %}
+
+
                         <!-- Header Button Start !-->
                         <!-- Mobile Menu Toggle Button Start !-->
                         <div class="mobile-menu-bar d-lg-none text-end">
@@ -335,5 +373,21 @@
   <script src="{% static 'js/select2.min.js' %}"></script>
   <script src="{% static 'js/jquery-ui.min.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
+<script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const languageLinks = document.querySelectorAll('.language-select');
+            languageLinks.forEach(link => {
+                link.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    const selectedLanguage = this.getAttribute('data-language');
+                    const currentUrl = window.location.href;
+                    const baseUrl = currentUrl.split('/')[0] + '//' + currentUrl.split('/')[2]; // Get base URL
+
+                    // Update URL with selected language
+                    window.location.href = `${baseUrl}/${selectedLanguage}`;
+                });
+            });
+        });
+    </script>
 </body>
 </html>
