--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7 align-self-center order-1 order-md-2">
-                                    <div class="slider-image">
-                                        <img src="{% static 'images/hero-section/image-1.png' %}" alt="feature image" />
+                                    <div class="slider-image" style="width: 653px; height: 848px;">
+                                        <img src="{% static 'images/hero-section/photo.png' %}" alt="feature image" />
                                     </div>
                                 </div>
                             </div>
