--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -38,7 +38,7 @@
     <div class="body-overlay"></div>
 
     <!-- Page Header Start !-->
-    <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/about.jpg')">
+    <div class="page-breadcrumb-area page-bg" style="width: 1400px; height: 500px; background-image: url('{% static 'images/breadcrumb/about.jpg' %}')">
         <!-- <div class="page-overlay"></div> -->
         <div class="container">
             <div class="row">
