--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -41,7 +41,7 @@
     <div class="body-overlay"></div>
 
     <!-- Page Header Start !-->
-    <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/image-1.jpg')">
+    <div class="page-breadcrumb-area page-bg" style="width: 1400px; height: 510px; background-image: url('{% static 'images/breadcrumb/image-2.jpg' %}')">
         <!-- <div class="page-overlay"></div> -->
         <div class="container">
             <div class="row">
@@ -62,6 +62,7 @@
         </div>
     </div>
     <!-- Page Header End !-->
+
 
     <!-- Contact-info Section Start !-->
     <div class="contact-info-area">
