--- a/templates/main/package_list.html
+++ b/templates/main/package_list.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block body %}
     <!-- Page Header Start -->
-    <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/tour.jpg')">
+    <div class="page-breadcrumb-area page-bg" style="width: 1400px; height: 500px; background-image: url('{% static 'images/breadcrumb/tour.jpg' %}')">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
