--- a/templates/post/blog-archive.html
+++ b/templates/post/blog-archive.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <!-- Page Header Start -->
-    <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/image-1.jpg')">
+    <div class="page-breadcrumb-area page-bg" style="width: 1400px; height: 500px; background-image: url('{% static 'images/breadcrumb/blog.jpg' %}')">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
