--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -132,7 +132,7 @@
         {% if form.errors %}
             <div class="text-danger">{{ form.errors }}</div>
         {% endif %}
-        <button type="button" class="btn mt-3 reg_btn">{% trans "Register" %}</button>
+        <button type="button" class="btn mt-3 reg_btn"  style="background-color: #99CCFF;">{% trans "Register" %}</button>
     </form>
     <div class="text-center fs-6">
         <a href="{% url 'login' %}">{% trans "Login" %}</a>
