--- a/templates/main/destination_detail.html
+++ b/templates/main/destination_detail.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <!-- Page Header Start !-->
-    <div class="page-breadcrumb-area page-bg" style="background-image: url('images/breadcrumb/destination-details.jpg')">
+    <div class="page-breadcrumb-area page-bg" style="width: 1400px; height: 500px; background-image: url('{% static 'images/breadcrumb/destination.jpg' %}')">
         <!-- <div class="page-overlay"></div> -->
         <div class="container">
             <div class="row">
