--- a/templates/base.html
+++ b/templates/base.html
@@ -136,7 +136,7 @@
                                     </li>
                                     {% if request.user.is_authenticated %}
                                     <li class="dropdown">
-                                        <a href="{% url 'logout' %}" style="font-size: 1.5em;">
+                                        <a href="{% url 'logout' %}">
                                             <i class='bx bx-log-out mt-1 me-1'>Logout</i>
                                         </a>
                                     </li>
